Fix(Medication Reminder page): adjust bottom margin for improved spacing

--- a/pages/page4/assets/css/style.css
+++ b/pages/page4/assets/css/style.css
@@ -98,7 +98,7 @@
     width: 1300px;
     margin: 0 auto;
     margin-top: 10%;
-    margin-bottom: 30%;
+    margin-bottom: 25%;
 }
 .container {
     background-color: #578FCA;
